# guile-irc

./: Makefile.am  README.md  configure.ac  guix.scm
build-aux/: test-driver.scm
irc/: tagged-hook.scm
test/: message-test.scm
